add logic for the start and reset button

--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
         <div class="watch">
             <div class="outer-circle">
                 <div class="inner-circle">
-                    <span class="text minute">01 :</span>
-                    <span class="text sec">&nbsp;47 :</span>
-                    <span class="text msec">&nbsp;97</span>
+                    <span class="text minute">0 :</span>
+                    <span class="text second">0.</span>
+                    <span class="text mSecond">&nbsp;0</span>
                 </div>
             </div>
             <div class="button-group">
