--- a/index.html
+++ b/index.html
@@ -24,35 +24,8 @@
             </div>
         </div>
         <ul class="laps">
-            <li class="lap-item">
-                <span class="number">#1</span>
-                <span class="time-stamp">01 : 43 : 07</span>
-            </li>
-            <li class="lap-item">
-                <span class="number">#1</span>
-                <span class="time-stamp">01 : 43 : 07</span>
-            </li>
-            <li class="lap-item">
-                <span class="number">#1</span>
-                <span class="time-stamp">01 : 43 : 07</span>
-            </li>
-            <li class="lap-item">
-                <span class="number">#1</span>
-                <span class="time-stamp">01 : 43 : 07</span>
-            </li>
-            <li class="lap-item">
-                <span class="number">#1</span>
-                <span class="time-stamp">01 : 43 : 07</span>
-            </li>
-            <li class="lap-item">
-                <span class="number">#1</span>
-                <span class="time-stamp">01 : 43 : 07</span>
-            </li>
-            <li class="lap-item">
-                <span class="number">#1</span>
-                <span class="time-stamp">01 : 43 : 07</span>
-            </li>
-            <button class="lap-clear-button">Clear All</button>
+            
+            <button class="lap-clear-button hidden">Clear All</button>
         </ul>
     </div>
 </body>
