--- a/index.html
+++ b/index.html
@@ -10,16 +10,19 @@
 <body>
     <div class="container">
         <div class="watch">
-            <div class="outer-circle">
-                <div class="inner-circle">
-                    <span class="text minute">0 :</span>
-                    <span class="text second">0.</span>
-                    <span class="text mSecond">&nbsp;0</span>
-                </div>
+            <div class="heading">
+                <h1>STOPWATCH</h1>
+                <div class="underline"></div>
+            </div>
+            <div class="display">
+                    <span class="text minute">00:</span>
+                    <span class="text second">00:</span>
+                    <span class="text mSecond">00</span>
             </div>
             <div class="button-group">
                 <button class="button reset hidden">Reset</button>
-                <button class="button start">Start</button>
+                <button class="start">Start</button>
+                <button class="stop hidden">Stop</button>
                 <button class="button lap hidden">Laps</button>
             </div>
         </div>
